--- a/concurrency/concurrency/concurrency.vcxproj
+++ b/concurrency/concurrency/concurrency.vcxproj
@@ -142,15 +142,12 @@
     <ClInclude Include="FunctionTraits.h" />
     <ClInclude Include="NonCopyable.h" />
     <ClInclude Include="Task.h" />
-    <ClInclude Include="TaskFutureUtils.h" />
+    <ClInclude Include="TaskUtils.h" />
     <ClInclude Include="TaskScheduler.h" />
     <ClInclude Include="Types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="TaskFuture.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
