--- a/concurrency/concurrency/concurrency.vcxproj
+++ b/concurrency/concurrency/concurrency.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="FunctionTraits.h" />
     <ClInclude Include="NonCopyable.h" />
     <ClInclude Include="Task.h" />
+    <ClInclude Include="TaskEnabler.h" />
     <ClInclude Include="TaskUtils.h" />
     <ClInclude Include="TaskScheduler.h" />
     <ClInclude Include="Types.h" />
