--- a/concurrency/concurrency/concurrency.vcxproj.filters
+++ b/concurrency/concurrency/concurrency.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Task.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
