more xcode/clanf fixes. now runs on mac, although with some random livelocks. :)

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@
 concurrency/.DS_Store
 
 .DS_Store
+
+*.pdb
+
+*.exe
+
+*.ilk
+
+*.obj
+
+*.idb
+
+*.tlog
+
+*.log
+
+*.xcbkptlist
+
+*.lastbuildstate
