--- a/concurrency/concurrency/concurrency.vcxproj.filters
+++ b/concurrency/concurrency/concurrency.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="TaskUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Timing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
