--- a/concurrency/concurrency/concurrency.vcxproj.filters
+++ b/concurrency/concurrency/concurrency.vcxproj.filters
@@ -30,7 +30,7 @@
     <ClInclude Include="TaskUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Timing.h">
+    <ClInclude Include="TimeIntervalCollector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -39,7 +39,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Task.cpp">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
