added gensln.bat + updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,33 @@ local/*
 *.stash
 *.opensdf
 *.sdf
+/build/debug/translations/qt_uk.qm
+/build/debug/translations/qt_sk.qm
+/build/debug/translations/qt_ru.qm
+/build/debug/translations/qt_lv.qm
+/build/debug/translations/qt_ko.qm
+/build/debug/translations/qt_ja.qm
+/build/debug/translations/qt_it.qm
+/build/debug/translations/qt_hu.qm
+/build/debug/translations/qt_he.qm
+/build/debug/translations/qt_fr.qm
+/build/debug/translations/qt_fi.qm
+/build/debug/translations/qt_en.qm
+/build/debug/translations/qt_de.qm
+/build/debug/translations/qt_cs.qm
+/build/debug/translations/qt_ca.qm
+/build/release/translations/qt_uk.qm
+/build/release/translations/qt_sk.qm
+/build/release/translations/qt_ru.qm
+/build/release/translations/qt_lv.qm
+/build/release/translations/qt_ko.qm
+/build/release/translations/qt_ja.qm
+/build/release/translations/qt_it.qm
+/build/release/translations/qt_hu.qm
+/build/release/translations/qt_he.qm
+/build/release/translations/qt_fr.qm
+/build/release/translations/qt_fi.qm
+/build/release/translations/qt_en.qm
+/build/release/translations/qt_de.qm
+/build/release/translations/qt_cs.qm
+/build/release/translations/qt_ca.qm
